syntax = "proto3";

option java_multiple_files = true;

package com.github.jameshnsears.chance.data.domain.proto;

import "dice.proto";

message BagProtocolBuffer {
  repeated DiceProtocolBuffer dice = 1;
}
